Fix alignment on social links

--- a/src/style.css
+++ b/src/style.css
@@ -766,6 +766,11 @@ ol.list-spacing {
   gap: 2rem;
 }
 
+.footer-text-wrapper {
+  display: flex;
+  justify-content: flex-start;
+}
+
 @media (max-width: 50em) {
   .footer-details {
     gap: 0;
